examples/errors/undeclared_class.lexer
Keyword{Span(2, 1, 8), 0}                      -> Program                 -> PROGRAM                                       
Delimiter{Span(2, 8, 9), 14}                   -> :                       -> COLON                                         
Main                                           -> Main                    -> IDENTIFIER                                    
Delimiter{Span(2, 14, 15), 18}                 -> (                       -> LEFT_PAREN                                    
Real{Span(2, 15, 18), 24, 1.100000}            -> 1.1                     -> REAL                                          
Delimiter{Span(2, 18, 19), 16}                 -> ,                       -> COMMA                                         
Real{Span(2, 20, 23), 24, 1.200000}            -> 1.2                     -> REAL                                          
Delimiter{Span(2, 23, 24), 19}                 -> )                       -> RIGHT_PAREN                                   
Keyword{Span(4, 1, 6), 1}                      -> class                   -> CLASS                                         
Main                                           -> Main                    -> IDENTIFIER                                    
Keyword{Span(4, 12, 14), 3}                    -> is                      -> IS                                            
Keyword{Span(5, 5, 9), 7}                      -> this                    -> THIS                                          
Delimiter{Span(5, 9, 10), 18}                  -> (                       -> LEFT_PAREN                                    
Delimiter{Span(5, 10, 11), 19}                 -> )                       -> RIGHT_PAREN                                   
Keyword{Span(5, 12, 14), 3}                    -> is                      -> IS                                            
Keyword{Span(6, 9, 12), 5}                     -> var                     -> VAR                                           
a                                              -> a                       -> IDENTIFIER                                    
Delimiter{Span(6, 15, 16), 14}                 -> :                       -> COLON                                         
Error                                          -> Error                   -> IDENTIFIER                                    
Delimiter{Span(6, 22, 23), 18}                 -> (                       -> LEFT_PAREN                                    
Integer{Span(6, 23, 24), 23, 5}                -> 5                       -> INTEGER                                       
Delimiter{Span(6, 24, 25), 19}                 -> )                       -> RIGHT_PAREN                                   
Keyword{Span(7, 5, 8), 4}                      -> end                     -> END                                           
Keyword{Span(8, 1, 4), 4}                      -> end                     -> END                                           
